plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

apply plugin: 'maven-publish'

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
        mavenLocal()
    }
}

group = 'fr.eris'
version = '1.0'

allprojects {
    apply plugin: 'idea'
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    group = 'fr.eris'
    version = '1.0'

    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

repositories {
    mavenCentral()
    maven {
        name = "spigotmc-repo"
        url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
    }
    maven {
        name = "sonatype"
        url = "https://oss.sonatype.org/content/groups/public/"
    }
}

shadowJar {
    relocate 'io.prometheus.client', 'fr.eris.eriscore.io.prometheus.client'
}

dependencies {
    compileOnly project(":NmsModule:api")
    compileOnly project(":NmsModule:NMS_1_20_R1")
    compileOnly project(":NmsModule:NMS_1_8_R3")

    compileOnly "org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT"
    compileOnly "org.projectlombok:lombok:1.18.28"
    annotationProcessor "org.projectlombok:lombok:1.18.28"
}

configurations {
    childJars
}

dependencies {
    subprojects.each {
        childJars project(it.path)
    }
}

jar {
    dependsOn configurations.childJars
    from { configurations.childJars.collect { zipTree(it) } }
}

shadowJar {
    dependsOn project.configurations.childJars
    from { project.configurations.childJars.collect { zipTree(it) } }
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}
